# cam_lidar_calib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
config/: basler.yaml  basler_config.yaml  nerian_left_r_faccal.yaml  nerian_left_ur_faccal.yaml  nerian_left_ur_roscal.yaml  nerian_passthru_faccal_left.yaml  nerian_passthru_faccal_right.yaml  nerian_right_ur_faccal.yaml  nerian_right_ur_roscal.yaml  pointgrey_config.yaml
include/: calibration_error_term.h
launch/: cam_lidar_calib.launch  cam_lidar_calib_basler.launch  cam_lidar_calib_basler_VLP.launch  cam_lidar_calib_basler_os.launch  cam_lidar_calib_nerian_left.launch  cam_lidar_calib_nerian_left_VLP.launch  cam_lidar_calib_nerian_left_os.launch  cam_lidar_calib_nerian_left_r_faccal.launch  cam_lidar_calib_nerian_left_ur.launch  cam_lidar_calib_nerian_left_ur_faccal.launch  cam_lidar_calib_nerian_left_ur_roscal.launch  cam_lidar_calib_nerian_right.launch  cam_lidar_calib_nerian_right_VLP.launch  cam_lidar_calib_nerian_right_os.launch  cam_lidar_calib_nerian_right_ur_faccal.launch  cam_lidar_calib_nerian_right_ur_roscal.launch  cam_lidar_calib_pgrey.launch  cam_lidar_proj.launch  cam_lidar_proj_basler.launch  cam_lidar_proj_nerian_disp_faccal.launch  cam_lidar_proj_nerian_left.launch  cam_lidar_proj_nerian_left_r_faccal.launch  cam_lidar_proj_nerian_left_ur_faccal.launch  cam_lidar_proj_nerian_left_ur_roscal.launch  cam_lidar_proj_nerian_right.launch  cam_lidar_proj_nerian_right_ur_faccal.launch  cam_lidar_proj_nerian_right_ur_roscal.launch  cam_lidar_proj_pgrey.launch  cloud_project.launch
(+25 files in other folders)
